--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Alessandra Ferrari & Advogados Associados - Devotos à Justiça. Escritório de advocacia em Cascavel/PR especializado em Direito Civil, Empresarial, Tributário e mais." />
     <meta name="keywords" content="advocacia, advogados, Cascavel, Paraná, direito civil, direito empresarial, direito tributário" />
+    <link rel="stylesheet" href="https://use.typekit.net/wdr5axh.css">
     <title>Alessandra Ferrari & Advogados Associados | Devotos à Justiça</title>
   </head>
   <body>
