--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Alessandra Ferrari & Advogados Associados - Devotos à Justiça. Escritório de advocacia em Cascavel/PR especializado em Direito Civil, Empresarial, Tributário e mais." />
     <meta name="keywords" content="advocacia, advogados, Cascavel, Paraná, direito civil, direito empresarial, direito tributário" />
